fixed styling so that flash messages display below each other and the close button is correctly aligned in FF

--- a/app/stylesheets/partials/_flashes.sass
+++ b/app/stylesheets/partials/_flashes.sass
@@ -37,7 +37,7 @@
     padding: 10px 29px 9px 15px
     background-position: 15px 7px
     background-repeat: no-repeat
-    display: table
+    display: inline-block
     position: relative
     text-align: left
     +border-radius(5px)
